# advent-2022

./: .gitignore  1.cpp  1.py  1.rs  2.py  2.rs  3.py  3.rs  4.py  4.rs  README.md  util.rs
python/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  17.py  18.py  2.py  21.py  22.py  25.py  3.py  4.py  5-2.py  5.py  6.py  7-2.py  7.py  8.py  9.py
rust/: Cargo.toml
rust/src/: lib.rs
